--- a/main.css
+++ b/main.css
@@ -53,6 +53,21 @@ html {
 
 .navigation-list {
     list-style-type: none;
+    text-transform: uppercase;
+
+    display: flex;
+    align-items: center;
+}
+
+.navigation-item {
+    padding: 12.5px 17.5px;
+    user-select: none;
+    transition: .5s all ease;
+}
+
+.navigation-item:hover {
+    text-shadow: 0px 5px 2.5px rgba(0, 0, 0, 1);
+    cursor: pointer;
 }
 
 /* ? Nawigacja z Kategoriami */
