--- a/main.css
+++ b/main.css
@@ -167,116 +167,367 @@ html {
     font-weight: 600;
     align-self: center;
 }
+* {
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
 
-/* Contact Form */
+html {
+	font-size: 16px;
+	color: rgba(0, 0, 0, 0.75);
+	overflow-x: hidden;
+}
+
+.container {
+	margin: 0 auto;
+	width: calc(100vw - 20px);
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+
+/* ? Nagłówek */
+
+.header {
+	background: #FFFFFF;
+	box-shadow: 0 5px 50px rgba(0, 0, 0, 0.25);
+	border-radius: 10px;
+	display: flex;
+	justify-content: space-between;
+	padding: 10px 0 7.5px 0;
+	margin: 5px;
+}
+
+.logo {
+	font-family: "Englebert", sans-serif;
+	font-size: 2rem;
+	font-weight: 900;
+	line-height: 150%;
+	transition: .5s all ease;
+	margin-left: 20px;
+}
+
+.logo:hover {
+	color: #F26E11;
+	cursor: pointer;
+}
+
+.fa-atlas {
+	font-weight: 900;
+	font-size: 2rem;
+	line-height: 150%;
+}
+
+/* ? Klasyczna Nawigacja */
+
+.navigation-list {
+	list-style-type: none;
+	text-transform: uppercase;
+	display: flex;
+	align-items: center;
+	margin-right: 10px;
+}
+
+.navigation-item {
+	padding: 12.5px 17.5px;
+	user-select: none;
+	transition: .5s all ease;
+}
+
+.navigation-item:hover {
+	text-shadow: 0 5px 2.5px rgba(0, 0, 0, 1);
+	cursor: pointer;
+}
+
+/* ? Landing Page */
+
+.landing-page {
+	position: relative;
+	margin-top: 30px;
+    /* Równe 3.75rem. */
+	display: flex;
+	justify-content: space-evenly;
+}
+
+.rectangle {
+	position: absolute;
+	top: 0;
+	left: 0;
+	height: 80%;
+	width: 12.5px;
+	background-color: #F26E11;
+	border-radius: 10px;
+}
+
+.headline {
+	font-size: 2.5rem;
+    /* Równe 42px */
+	font-family: "Englebert", sans-serif;
+	letter-spacing: 1px;
+	margin-top: 20px;
+    /* Równe 1.25rem */;
+}
+
+.description-button {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	margin-top: 5px;
+    /* Równe 1.5rem */;
+}
+
+.description {
+	font-size: 1.25rem;
+	font-family: "Montserrat", sans-serif;
+	line-height: 1.75;
+	font-weight: 600;
+	width: 460px;
+}
+
+.btn-hand-down {
+	position: relative;
+	width: 120px;
+	height: 120px;
+	border-radius: 50%;
+	text-decoration: none;
+	background-color: #014C78;
+	color: #FFFFFF;
+}
+
+.btn-hand-down::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	background-color: #269FE5;
+	clip-path: circle(0);
+	transition: clip-path .9s, filter .7s;
+}
+
+.btn-hand-down:hover::before {
+	clip-path: circle(100%);
+	filter: drop-shadow(6px 6px 10px rgba(0, 0, 0, 0.25));
+}
+
+.fa-hand-point-down {
+	font-size: 3.1rem;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.illustration {
+	width: 275px;
+	height: auto;
+	font-size: 1.25rem;
+	font-family: "Montserrat", sans-serif;
+	font-weight: 600;
+	align-self: center;
+}
+
+/* ? Nawigacja z Kategoriami */
+
+.categories-container {
+	font-family: 'Englebert', sans-serif;
+	position: relative;
+	top: -400px;
+}
+
+.category-list {
+	list-style-type: none;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+}
+
+.categories-introduction {
+	font-size: 1.75rem;
+	text-align: center;
+	margin: 25px 0;
+}
+
+.category {
+	color: #E9EAE9;
+	background-color: #014C78;
+	padding: 20px;
+	margin-top: 10px;
+	border-radius: 30px;
+	user-select: none;
+	font-size: 1.15rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	border: 2.5px dashed transparent;
+	transition: .5s all ease;
+}
+
+.category:hover {
+	box-shadow: 15px 7.5px 0 rgba(0, 0, 0, 0.25);
+	cursor: pointer;
+	border: 2.5px dashed #E9EAE9;
+}
+
+.category-icon {
+	font-size: 1.75rem;
+}
+
+/* ? Contact Form */
 
 .form-introduction {
-    color: rgba(0, 0, 0, .35);
-    font-size: 3rem;
-    text-align: center;
-    font-family: "Englebert", sans-serif;
+	color: rgba(0, 0, 0, .35);
+	font-size: 3rem;
+	text-align: center;
+	font-family: "Englebert", sans-serif;
 }
 
 .fa-paper-plane {
-    margin-left: 10px;
+	margin-left: 10px;
 }
 
 .form {
-    width: 70vw;
-    background: rgba(1, 76, 120, 0.8);
-    border-radius: 30px;
-    margin: 40px auto 0 auto;
-    padding: 30px 50px;
+	width: 70vw;
+	background: rgba(1, 76, 120, 0.8);
+	border-radius: 30px;
+	margin: 40px auto 0 auto;
+	padding: 30px 50px;
 }
 
 .form-ilustration {
-    display: flex;
-    justify-content: space-around;
+	display: flex;
+	justify-content: space-around;
 }
 
 .label-input {
-    display: flex;
-    align-items: center;
-    margin-top: 20px;
+	display: flex;
+	align-items: center;
+	margin-top: 20px;
 }
 
 .label-textarea {
-    margin-top: 40px;
-    display: flex;
-    flex-direction: column;
+	margin-top: 40px;
+	display: flex;
+	flex-direction: column;
 }
 
 .form-labels {
-    color: white;
-    font-size: 1.4rem;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 500;
+	color: white;
+	font-size: 1.4rem;
+	font-family: "Montserrat", sans-serif;
+	font-weight: 500;
 }
 
 .form-inputs,
 .form-textarea {
-    background-color: #E9EAE9;
-    border: 2px solid #F26E11;
-    border-radius: 15px;
-    padding: 10px 20px;
-    transition: background-color .5s;
+	background-color: #E9EAE9;
+	border: 2px solid #F26E11;
+	border-radius: 15px;
+	padding: 10px 20px;
+	transition: background-color .5s;
 }
 
 .form-inputs {
-    margin-left: 10px;
+	margin-left: 10px;
 }
 
 .form-textarea {
-    margin-top: 20px;
-    resize: none;
+	margin-top: 20px;
+	resize: none;
 }
 
 .form-inputs:focus,
 .form-textarea:focus {
-    background-color: #C5C6C5;
+	background-color: #C5C6C5;
 }
 
-
 .illustration-question {
-    align-self: center;
-    width: 300px;
-    font-size: 1.25rem;
-    font-family: "Montserrat", sans-serif;
-    font-weight: 600;
-    color: white;
+	align-self: center;
+	width: 300px;
+	font-size: 1.25rem;
+	font-family: "Montserrat", sans-serif;
+	font-weight: 600;
+	color: white;
 }
 
 .form-button {
-    position: relative;
-    background-color: #F26E11;
-    font-family: "Englebert", sans-serif;
-    font-size: 2.2rem;
-    padding: 5px 50px;
-    border: none;
-    border-radius: 30px;
-    box-shadow: 3px 3px 4px 2px rgba(0, 0, 0, 0.25);
-    color: white;
-    cursor: pointer;
-    overflow: hidden;
-    margin: 40px auto 0 auto;
-    display: block;
+	position: relative;
+	background-color: #F26E11;
+	font-family: "Englebert", sans-serif;
+	font-size: 2.2rem;
+	padding: 5px 50px;
+	border: none;
+	border-radius: 30px;
+	box-shadow: 3px 3px 4px 2px rgba(0, 0, 0, 0.25);
+	color: white;
+	cursor: pointer;
+	overflow: hidden;
+	margin: 40px auto 0 auto;
+	display: block;
 }
 
-
 .message {
-    background-color: #F26E11;
-    position: absolute;
-    top: -100%;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    border-radius: 30px;
-    transition: transform .7s;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+	background-color: #F26E11;
+	position: absolute;
+	top: -100%;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	border-radius: 30px;
+	transition: transform .7s;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .form-button:hover .message {
-    transform: translateY(100%);
+	transform: translateY(100%);
+}
+
+
+/* ? Stopka */
+
+.footer {
+	box-shadow: 0 5px 50px rgba(0, 0, 0, 0.25);
+	border-radius: 10px;
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	padding: 10px 0 7.5px 0;
+	margin: 5px;
+	font-size: 1.25rem;
+	font-family: "Englebert", sans-serif;
+	font-weight: 900;
+	line-height: 150%;
+}
+
+.fab {
+	user-select: none;
+	transition: .5s all ease;
+	padding: 10px;
+	border-radius: 50%;
+}
+
+.fab:hover {
+	color: #FFFFFF;
+	cursor: pointer;
+}
+
+.fa-facebook:hover {
+	background-color: #3B5998;
+}
+
+.fa-youtube:hover {
+	background-color: #C4302B;
+}
+
+.fa-snapchat-ghost:hover {
+	background-color: #FFFC00;
+}
+
+.fa-linkedin-in:hover {
+	background-color: #0E76A8;
 }
