--- a/main.css
+++ b/main.css
@@ -42,7 +42,7 @@ html {
     cursor: pointer;
 }
 
-.fas {
+.fa-atlas {
     font-weight: 900;
     font-size: 2rem;
     line-height: 150%;
@@ -380,7 +380,7 @@ html {
 
 .form-introduction {
 	color: rgba(0, 0, 0, .35);
-	font-size: 3rem;
+	font-size: 1.75rem;
 	text-align: center;
 	font-family: "Englebert", sans-serif;
 }
@@ -390,11 +390,11 @@ html {
 }
 
 .form {
-	width: 70vw;
+	width: 60vw;
 	background: rgba(1, 76, 120, 0.8);
 	border-radius: 30px;
-	margin: 40px auto 0 auto;
-	padding: 30px 50px;
+	margin: 40px auto;
+	padding: 30px;
 }
 
 .form-ilustration {
@@ -405,18 +405,18 @@ html {
 .label-input {
 	display: flex;
 	align-items: center;
-	margin-top: 20px;
+	margin-top: 15px;
 }
 
 .label-textarea {
-	margin-top: 40px;
+	margin-top: 30px;
 	display: flex;
 	flex-direction: column;
 }
 
 .form-labels {
-	color: white;
-	font-size: 1.4rem;
+	color: #FFFFFF;
+	font-size: 1.25rem;
 	font-family: "Montserrat", sans-serif;
 	font-weight: 500;
 }
@@ -428,6 +428,7 @@ html {
 	border-radius: 15px;
 	padding: 10px 20px;
 	transition: background-color .5s;
+	font-family: 'Montserrat', sans-serif;
 }
 
 .form-inputs {
@@ -435,7 +436,7 @@ html {
 }
 
 .form-textarea {
-	margin-top: 20px;
+	margin-top: 15px;
 	resize: none;
 }
 
@@ -447,22 +448,23 @@ html {
 .illustration-question {
 	align-self: center;
 	width: 300px;
+	height: auto;
 	font-size: 1.25rem;
 	font-family: "Montserrat", sans-serif;
-	font-weight: 600;
-	color: white;
+	font-weight: 400;
+	color: #FFFFFF;
 }
 
 .form-button {
 	position: relative;
 	background-color: #F26E11;
 	font-family: "Englebert", sans-serif;
-	font-size: 2.2rem;
-	padding: 5px 50px;
+	font-size: 1.75rem;
+	padding: 10px 40px;
 	border: none;
 	border-radius: 30px;
 	box-shadow: 3px 3px 4px 2px rgba(0, 0, 0, 0.25);
-	color: white;
+	color: #FFFFFF;
 	cursor: pointer;
 	overflow: hidden;
 	margin: 40px auto 0 auto;
@@ -486,7 +488,6 @@ html {
 .form-button:hover .message {
 	transform: translateY(100%);
 }
-
 
 /* ? Stopka */
 
