--- a/main.css
+++ b/main.css
@@ -78,12 +78,13 @@ html {
     cursor: pointer;
 }
 
-/*Hamburger*/
+/* ? Hamburger Menu */
+
 .hamburger {
     position: fixed;
     right: 30px;
-    top: 15px;
-    height: 25px;
+    top: 17.5px;
+    height: 20px;
     width: 40px;
     background-color: transparent;
     border: none;
@@ -172,17 +173,16 @@ html {
     width: 460px;
 }
 
-.btn-hand-down {
+#btn-hand-down {
     position: relative;
     width: 120px;
     height: 120px;
     border-radius: 50%;
-    text-decoration: none;
     background-color: #014C78;
     color: #FFFFFF;
 }
 
-.btn-hand-down::before {
+#btn-hand-down::before {
     content: "";
     position: absolute;
     top: 0;
@@ -195,7 +195,7 @@ html {
     transition: clip-path .9s, filter .7s;
 }
 
-.btn-hand-down:hover::before {
+#btn-hand-down:hover::before {
     clip-path: circle(100%);
     filter: drop-shadow(6px 6px 10px rgba(0, 0, 0, 0.25));
 }
@@ -216,6 +216,7 @@ html {
     font-weight: 600;
     align-self: center;
     margin-top: 10px;
+    pointer-events: none;
 }
 
 /* ? Nawigacja z Kategoriami */
@@ -345,6 +346,7 @@ html {
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
     color: #FFFFFF;
+    pointer-events: none;
 }
 
 .form-button {
@@ -361,6 +363,7 @@ html {
     overflow: hidden;
     margin: 40px auto 0 auto;
     display: block;
+    user-select: none;
 }
 
 .message {
@@ -377,11 +380,9 @@ html {
     justify-content: center;
 }
 
-
 .form-button:hover .message {
     transform: translateY(100%);
 }
-
 
 /* ? Stopka */
 
@@ -427,14 +428,14 @@ html {
     background-color: #0E76A8;
 }
 
-
+/* ? Media Queries */
 
 @media(max-width:1100px) {
     html {
         font-size: 14px;
     }
 
-    .btn-hand-down {
+    #btn-hand-down {
         width: 100px;
         height: 100px;
     }
@@ -461,7 +462,7 @@ html {
         width: 320px;
     }
 
-    .btn-hand-down {
+    #btn-hand-down {
         margin-left: 20px;
     }
 
@@ -489,7 +490,7 @@ html {
         font-size: 1.2rem;
     }
 
-    .btn-hand-down {
+    #btn-hand-down {
         width: 80px;
         height: 80px;
     }
@@ -534,7 +535,7 @@ html {
         text-align: center;
     }
 
-    .btn-hand-down {
+    #btn-hand-down {
         margin-left: 0;
         margin-top: 20px;
     }
@@ -543,6 +544,21 @@ html {
         margin-top: 30px;
     }
 
+    .category {
+        padding: 15px;
+    }
+
+    .form {
+        padding-left: 0;
+        width: 65vw;
+    }
+
+    .illustration-question {
+        display: none;
+    }
+}
+
+@media(max-width: 730px) {
     #svg-element {
         display: none;
     }
@@ -560,22 +576,9 @@ html {
         background-color: #00C5D4;
         margin: 25px 0;
         padding: 30px 10px 70px 10px;
-        clip-path: circle(55% at 50% 50%);
+        border-radius: 30px;
     }
-
-    .form {
-        padding-left: 0;
-        width: 65vw;
-    }
-
-    .illustration-question {
-        display: none;
-        /* POPRAWKA */
-    }
-
 }
-
-
 
 @media(max-width:680px) {
     .header {
@@ -608,59 +611,14 @@ html {
         padding: 20px 0;
         background-color: white;
         border-radius: 5px;
-        border: 2px solid #014166;
+        border: 2.5px solid #014166;
         margin-top: 5px;
     }
 
     .navigation-item:focus {
         background-color: #e7e7e7;
     }
-
 }
-
-/*Hovery*/
-
-@media(hover:none) {
-    .logo:hover {
-        color: #F26E11;
-        cursor: pointer;
-    }
-
-
-
-    .form-button:hover .message {
-        transform: translateY(100%);
-    }
-
-    .fa-facebook:hover {
-        background-color: #3B5998;
-    }
-
-    .fa-youtube:hover {
-        background-color: #C4302B;
-    }
-
-    .fa-snapchat-ghost:hover {
-        background-color: #FFFC00;
-    }
-
-    .fa-linkedin-in:hover {
-        background-color: #0E76A8;
-    }
-
-    .category:hover {
-        box-shadow: 15px 7.5px 0 rgba(0, 0, 0, 0.25);
-        cursor: pointer;
-        border: 2.5px dashed #E9EAE9;
-    }
-
-    .btn-hand-down:hover::before {
-        clip-path: circle(100%);
-        filter: drop-shadow(6px 6px 10px rgba(0, 0, 0, 0.25));
-    }
-}
-
-
 
 @media(max-width:600px) {
     .form {
@@ -669,14 +627,14 @@ html {
 
     .footer-text {
         width: 180px;
+        line-height: 2;
     }
 
     .social-media-icons {
         width: 150px;
+        line-height: 2;
     }
 }
-
-
 
 @media(max-width:460px) {
     html {
@@ -695,7 +653,6 @@ html {
         right: 30px;
     }
 
-
     .navigation-list {
         top: 54px;
     }
@@ -712,10 +669,7 @@ html {
     .footer-text {
         width: 150px;
     }
-
 }
-
-
 
 @media(max-width:400px) {
     .headline {
@@ -728,6 +682,20 @@ html {
 
     .form {
         width: 90vw;
+    }
+}
+
+@media(max-width: 385px) {
+    .label-input {
+        flex-direction: column;
+    }
+
+    .form-inputs {
+        margin-top: 10px;
+    }
+
+    .label-textarea {
+        text-align: center;
     }
 }
 
@@ -745,7 +713,7 @@ html {
         font-size: 1.1rem;
     }
 
-    .btn-hand-down {
+    #btn-hand-down {
         width: 70px;
         height: 70px;
     }
@@ -767,8 +735,15 @@ html {
     }
 }
 
-/*Class using in JS. 
-Its purpose is translate navbar*/
+/* * Class used in JS. Its purpose is to translate the navbar. */
+
 .navigation-list-down {
     transform: translateX(0);
+}
+
+/* * Styling links */
+
+.link {
+    text-decoration: none;
+    color: inherit;
 }
