--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ html {
 
 .header {
     position: fixed;
-    left: 5px;
+    top: 0px;
     width: calc(100vw - 30px);
     background: #FFFFFF;
     box-shadow: 0 5px 50px rgba(0, 0, 0, 0.25);
@@ -156,6 +156,7 @@ html {
     font-family: "Englebert", sans-serif;
     letter-spacing: 1px;
     margin-top: 20px;
+    line-height: 175%;
 }
 
 .description-button {
@@ -397,7 +398,7 @@ html {
     font-size: 1.25rem;
     font-family: "Englebert", sans-serif;
     font-weight: 900;
-    line-height: 150%;
+    line-height: 175%;
 }
 
 .fab {
