--- a/css/subpage-styles.css
+++ b/css/subpage-styles.css
@@ -1,23 +1,9 @@
-.navigation-item {
-    padding: 12.5px 17.5px;
-    user-select: none;
-    transition: .5s all ease;
-    text-transform: uppercase;
-    z-index: 50;
-    margin-right: 10px;
-}
-
-.navigation-item:hover {
-    text-shadow: 0 5px 2.5px rgba(0, 0, 0, 1);
-    cursor: pointer;
-}
-
 /* ? Landing Page Equivalent */
 
 .introduction-container {
     display: flex;
     position: relative;
-    margin-top: 70px;
+    margin-top: 90px;
 }
 
 .introduction-text {
@@ -32,15 +18,17 @@
 .introduction-headline {
     font-family: 'Englebert', sans-serif;
     text-align: center;
-    font-size: 1.75rem;
+    font-size: 2.25rem;
     margin-top: 20px;
 }
 
 .introduction-paragraph {
     font-family: 'Montserrat', sans-serif;
-    line-height: 1.75;
+    line-height: 1.5;
     text-align: justify;
-    margin: 0px 75px;
+    font-size: 1.25rem;
+    margin: 20px 95px;
+    font-weight: 600;
 }
 
 .image-container {
@@ -48,13 +36,13 @@
     justify-content: center;
     align-items: center;
     margin-top: 25px;
-    width: 25vw;
+    width: 15vw;
 }
 
 .introduction-image {
-    width: 250px;
+    width: 450px;
     height: auto;
-    border-radius: 50%;
+    border-radius: 15px;
     font-size: 1.25rem;
     font-family: "Montserrat", sans-serif;
     font-weight: 400;
@@ -72,10 +60,40 @@
     color: #E9EAE9;
     font-size: 1.15rem;
     transition: .5s all ease;
+    border: 2.5px dashed transparent;
+    margin-top: 10px;
 }
 
 .learn-more-btn:hover {
     box-shadow: 10px 5px 0 rgba(0, 0, 0, 0.25);
     cursor: pointer;
     border: 2.5px dashed #E9EAE9;
+}
+
+/* ? Filler */
+
+.filler {
+    background: rgba(20, 158, 188, 0.21);
+    margin: 60px 0;
+    padding: 30px;
+    font-size: 1.25rem;
+    text-align: center;
+    font-weight: 400;
+    font-family: 'Englebert', sans-serif;
+}
+
+.filler-img {
+    width: 35px;
+    height: auto;
+    vertical-align: middle;
+    margin-right: 30px;
+}
+
+/* ? Arrow */
+
+.fa-arrow-right {
+    position: absolute;
+    top: 175px;
+    right: 75px;
+    font-size: 1.75rem;
 }
