--- a/css/subpage-styles.css
+++ b/css/subpage-styles.css
@@ -29,6 +29,7 @@
     font-size: 1.25rem;
     margin: 20px 95px;
     font-weight: 600;
+    text-align-last: center;
 }
 
 .image-container {
@@ -62,6 +63,7 @@
     transition: .5s all ease;
     border: 2.5px dashed transparent;
     margin-top: 10px;
+    user-select: none;
 }
 
 .learn-more-btn:hover {
@@ -87,6 +89,7 @@
     height: auto;
     vertical-align: middle;
     margin-right: 30px;
+    pointer-events: none;
 }
 
 /* ? Arrow */
@@ -94,11 +97,22 @@
 .fa-arrow-right {
     position: absolute;
     top: 175px;
-    right: 75px;
+    right: 55px;
     font-size: 1.75rem;
+    padding: 10px;
+    border-radius: 50%;
+    transition: .5s all ease;
 }
 
-/*Paragraph*/
+.fa-arrow-right:hover {
+    background-color: #F26E11;
+    color: #E9EAE9;
+    cursor: pointer;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.25);
+}
+
+/* ? Paragraph */
+
 .paragraph-container {
     width: 70vw;
     margin: 60px auto 0 auto;
@@ -128,17 +142,18 @@
     justify-content: space-around;
     border-radius: 30px;
     padding: 60px 20px;
-    box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 0px 7.5px 7.5px rgba(0, 0, 0, 0.25);
+    color: #FFFFFF;
 }
 
 .paragraph-text {
-    color: white;
     width: 350px;
     font-family: "Montserrat", sans-serif;
     line-height: 2.0;
+    text-align: justify;
 }
 
-/*Newsletter*/
+/* ? Newsletter Tile */
 
 .newsletter {
     background: #149EBC36;
@@ -206,7 +221,7 @@
     border: 2px solid #F26E11;
     background-color: #E9EAE9;
     color: #F26E11;
-    box-shadow: 7.5px 7.5px 2.5px 2.5px #00000059;
+    box-shadow: 5px 5px 2.5px 2.5px #00000059;
     overflow: hidden;
     cursor: pointer;
     border-radius: 20px;
@@ -232,5 +247,5 @@
 }
 
 .newsletter-btn:hover {
-    color: white;
+    color: #FFFFFF;
 }
