--- a/css/main.css
+++ b/css/main.css
@@ -32,6 +32,7 @@ html {
     border-radius: 10px;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 10px 0 7.5px 0;
     z-index: 51;
 }
@@ -53,7 +54,8 @@ html {
 
 /* ? Klasyczna Nawigacja */
 
-.navigation-list {
+.navigation-list,
+.navigation-subpage-list {
     list-style-type: none;
     text-transform: uppercase;
     display: flex;
@@ -62,13 +64,19 @@ html {
     z-index: 50;
 }
 
-.navigation-item {
+.navigation-item,
+.navigation-subpage-item {
     padding: 12.5px 17.5px;
     user-select: none;
     transition: .5s all ease;
 }
 
-.navigation-item:hover {
+.navigation-subpage-item {
+    padding: 0;
+}
+
+.navigation-item:hover,
+.navigation-subpage-item:hover {
     text-shadow: 0 5px 2.5px rgba(0, 0, 0, 1);
     cursor: pointer;
 }
@@ -408,7 +416,7 @@ html {
 
     .logo {
         margin-left: 15px;
-        font-size: 1.6rem;
+        font-size: 1.5rem;
     }
 
     .hamburger {
