--- a/css/subpage-styles.css
+++ b/css/subpage-styles.css
@@ -206,9 +206,10 @@
 
 .label-email {
     position: absolute;
-    top: 10px;
+    top:50%;
     left: 20px;
     color: rgba(0, 0, 0, 0.75);
+    transform:translate(-50%);
     transition: transform .5s;
     font-family: 'Englebert', sans-serif;
     font-size: 1.2rem;
@@ -216,7 +217,7 @@
 
 .email-form:focus~.label-email,
 .email-form:not(:placeholder-shown).email-form:not(:focus)~.label-email {
-    transform: translateY(-35px);
+    transform: translateY(-50% - 30px);
 }
 
 .newsletter-btn {
@@ -428,6 +429,9 @@
     .introduction-container {
         margin-top: 50px;
     }
+    .filler{
+        line-height:1.5;
+    }
 }
 
 @media(max-width:400px) {
@@ -457,7 +461,7 @@
 
 @media(max-width:320px) {
     .newsletter-btn {
-        padding: 8px 16px;
+        padding: 12px 16px;
         margin-left: 15px;
     }
 
