--- a/css/subpage-styles.css
+++ b/css/subpage-styles.css
@@ -97,7 +97,7 @@
 .fa-arrow-right {
     position: absolute;
     top: 175px;
-    right: 55px;
+    right: 100px;
     font-size: 1.75rem;
     padding: 10px;
     border-radius: 50%;
@@ -105,6 +105,23 @@
 }
 
 .fa-arrow-right:hover {
+    background-color: #F26E11;
+    color: #E9EAE9;
+    cursor: pointer;
+    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.25);
+}
+
+.fa-arrow-left {
+    position: absolute;
+    top: 175px;
+    left: 25px;
+    font-size: 1.75rem;
+    padding: 10px;
+    border-radius: 50%;
+    transition: .5s all ease;
+}
+
+.fa-arrow-left:hover {
     background-color: #F26E11;
     color: #E9EAE9;
     cursor: pointer;
